--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
+    "expess": "^0.0.1-security",
     "express": "^4.21.2",
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
@@ -22,7 +23,7 @@
     "mercadopago": "^2.9.0",
     "moment": "^2.30.1",
     "multer": "^2.0.2",
-    "mysql2": "^3.14.5",
+    "mysql2": "^3.15.2",
     "node": "^22.19.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
