--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Lavinia",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
